- Implement UUID::operator==() and !=() (SQLAware Corporation).
- Fixed long standing (introduced in 2.6.3) bug which resulted in always
  creating a DIB and not DDB in wxBitmap(const wxImage&) ctor.
- Fix the bug with wxFileDialog not being shown at all if the default file name
  was invalid.
- Fix hang in keyboard navigation code with radio buttons under Windows 2000.

wxGTK:

- Fixed masking of disabled bitmaps in wxMenuItem and wxStaticBitmap.
- Fixed generation of events for an initially empty wxDirPickerCtrl.
- Fixed detection of Meta key state so that NumLock isn't misdetected
  as Meta (requires GTK+ 2.10).
- Fix changing font/colour of label in buttons with images (Marcin Wojdyr).

wxMac:

- Fixed a glitch where clicking on a scrollbar (but not moving the scrollbar)
  would cause the window to scroll.

2.8.8
-----

All:

- Fixed bug with parsing some dates in wxDateTime (Bob Pesner).
- Fixed bug with parsing negative time zones in wxDateTime::ParseRfc822Date().
- Initialize current line in wxTextBuffer ctor (Suzuki Masahiro).
- Improved performance of XML parsing (Francesco Montorsi).
- Fix wxDateTime::ParseRfc822Date() to handle missing seconds (Joe Nader).

All (GUI):

- Added wxWindow::GetNextSibling() and GetPrevSibling().
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov).
- Ensure that wxGrid::AutoSizeColumn/Row() never sets column/row size
  smaller than the minimal size.
- Added <scrollrate> parameter to wxScrolledWindow XRC handler.
- wxRichTextCtrl performance has been improved considerably.
- Several wxRichTextCtrl style, paste and undo bugs fixed.
- Added wxRichTextCtrl superscript and subscript support (Knut Petter Lehre).
- wxNotebook RTTI corrected, so now wxDynamicCast(notebook, wxBookCtrlBase)
  works.
- When focus is set to wxScrolledWindow child, scroll it into view.
- Improve wximage::ResampleBox() (Mihai Ciocarlie).
- Implemented ScrollList() in generic wxListCtrl (Tim Kosse).